# vaspsetup-ase

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
conda-recipe/: meta.yaml
src/: app.rs  config.rs  main.rs  python.rs  shell.rs  state.rs
src/screens/: calc_type.rs  choose_path.rs  confirm.rs  edit_incar.rs  edit_kpoints.rs  file_pick.rs  magmom.rs  mod.rs  result.rs  spin_mode.rs  submit_setup.rs  tst_method.rs  welcome.rs
src/widgets/: file_list.rs  footer.rs  header.rs  mod.rs
templates/: sge.sh
tests/fixtures/: POSCAR_Fe2O3  POSCAR_simple
tests/mock/: mock_qsub.sh
tests/python/: conftest.py  test_atoms.py  test_presets.py  test_protocol.py  test_write.py
vaspsetup_core/: __init__.py  __main__.py  _cli.py  atoms.py  io.py  write.py
vaspsetup_core/presets/: __init__.py  bader.json  charge_density.json  ci_neb.json  dimer.json  elf.json  frequency.json  geometry_opt.json  neb.json  orbital.json  pdos.json  single_point.json
