[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vaspsetup-ase"
version = "0.2.0"
description = "VASP calculation setup and submission CLI (ASE backend)"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "VASPSetup Contributors" },
]
keywords = ["vasp", "dft", "computational-chemistry", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "ase>=3.22",
    "numpy>=1.24",
]

[project.scripts]
vaspsetup = "vaspsetup_core._cli:main"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[tool.setuptools.packages.find]
include = ["vaspsetup_core*"]

[tool.setuptools.package-data]
vaspsetup_core = ["presets/*.json", "bin/*"]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
